src/css/menu.css
@font-face {
    font-family: menuFont;
    src: url("../fonts/TTNormsProRegular.otf");
}

#popupMenu {
    position: absolute;
    font-family: menuFont;
    color: rgb(187, 187, 187);

    letter-spacing: 1px;
    font-size: 15px;
    width: 210px;
    height: 200px;
    /* background-image: url('/images/DALLE/DALLE4.png'); */
    /* background-color: black; */
    background-color: rgb(0, 0, 0, 0.8);

    /* DARK GREY THEME BACKGROUND */
    /* background-color: rgba(32, 32, 32, 1); */

    /* POTENTIAL DESIGN ALTERNATIVE -- WHITE BORDER */
    /* border: 3px solid rgb(255, 255, 255); */

    /* background-image: linear-gradient(to bottom, #3b8fe3, #1d60a3, #7f04c7); */
    padding: 10px 10px;
    border-radius: 15px;
    right: 0;
    bottom: 0;
    top: 80px;
    /* border: 1px solid rgb(187, 187, 187); */
    border: 3px solid rgb(255, 255, 255);
    display: none;
    opacity: 0;
    transition: opacity 0.15s ease-in, opacity 0.05s ease-out;

    flex-direction: column;
}

#popupQuestionMenu {
    position: fixed;
    font-family: menuFont;
    color: rgb(187, 187, 187);

    letter-spacing: 1px;
    font-size: 15px;
    min-width: 210px;
    height: 200px;
    background-color: rgba(32, 32, 32, 1);

    padding: 10px 10px;
    border-radius: 15px;
    right: 25px;
    bottom: 100px;
    /* display: none; */
    opacity: 0;
    transition: opacity 0.15s ease-in, opacity 0.05s ease-out;
    z-index: 22;

    flex-direction: column;
}

#popupMenu > div {
    position: relative;
    height: 30px;

    display: flex;
    align-items: center;
    justify-content: left; /* Change this to left if you want to add icons */
    height: 45px;
    
    /* border: 1px solid white; */
    border-radius: 8px;
}

#popupQuestionMenu > div {
    position: relative;
    height: 30px;

    display: flex;
    align-items: center;
    justify-content: left; /* Change this to left if you want to add icons */
    height: 45px;
    
    /* border: 1px solid white; */
    border-radius: 8px;
}

#popupMenu > div:hover {
    background-color: rgba(255, 255, 255, 0.25);
    color: white;
    cursor: pointer;
}

#popupQuestionMenu > div:hover {
    background-color: rgba(255, 255, 255, 0.25);
    color: white;
    cursor: pointer;
}

#questionIcon {
    opacity: 0;
    transform: scale(0.85);
    transition: opacity 1s ease-in-out;
    position: relative;
}

#questionIcon:hover {
    cursor: pointer;
}

.menuContainer {
    display: flex;
    flex-direction: columns;
    padding-right: 10px;
}

.menuIcon {
    padding-left: 10px;
    padding-right: 15px;
}

#blogIcon {
    width: 22px;
    height: 25px;
}

#aboutIcon, #aboutIconNotes {
    width: 22px;
    height: 22px;
}

#settingsIcon {
    width: 22px;
    height: 22px;
}

#loginIcon, #loginIcon2 {
    width: 30px;
    height: 22px;
    display: flex;
    
    /* Override padding for login icon cause it's hella wide :P */
    padding-right: 7px;
}

#accountIconFinal {
    width: 22px;
    height: 22px;
    display: none;
}

#logoutIcon {
    width: 21px;
    height: 21px;
    display: none;
}

#menu_hr {
    height: 1px;
    border: none;
    background-color: rgba(255, 255, 255, 0.25); /* or any desired color */
    /* position: absolute; */
    margin-top: 10px;
    margin-bottom: 10px;
    width: 100%;
}

#aboutContainer, #blogContainer {
    margin-top: 20px;
    position: fixed;
    /* background: rgb(255, 255, 255); */
    background-color: rgba(0, 0, 0, 0.8);
    padding: 10px 10px;
    z-index: 12;
    border-radius: 10px;
    right: 0;
    left: 50%;
    top: 105px;
    /* transform: translate(-50%, -50%); */
    transform: translateX(-50%);
    /* border: 2px solid black; */
    width: 80%;
    max-width: 800px;
    /* min-height: 800px; */

    display: none;
    /* border: 2px solid yellow; */

    max-height: 70vh; /* make smaller to make full 'about window' show up on devices smaller than my iPhone 12 */
    overflow-y: auto;

    /* DARK GREY THEME BACKGROUND */
    /* background-color: rgba(32, 32, 32, 0.9); */

    /* POTENTIAL DESIGN ALTERNATIVE -- WHITE BORDER */
    /* border: 3px solid rgb(255, 255, 255); */
}

#aboutContainer::-webkit-scrollbar {
    width:10px;
    height: 8px;
}

#aboutContainer::-webkit-scrollbar:hover {
    cursor: pointer;
}

#aboutContainer::-webkit-scrollbar-track {
    /* background: transparent; */
    background: rgba(255, 255, 255, 0);
}

#aboutContainer::-webkit-scrollbar-thumb {
    background-color: #888;
    border-radius: 10px;
}

#blogContainer::-webkit-scrollbar {
    width:10px;
    height: 8px;
}

#blogContainer::-webkit-scrollbar:hover {
    cursor: pointer;
}

#blogContainer::-webkit-scrollbar-track {
    /* background: transparent; */
    background: rgba(255, 255, 255, 0);
}

#blogContainer::-webkit-scrollbar-thumb {
    background-color: #888;
    border-radius: 10px;
}

#aboutWindow, #blogWindow {
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 100%;
    height: 100%;
    /* border: 2px solid yellow; */
}

#privacyIcon, #termsIcon {
    height: 20px;
    width: 20px;
}

@keyframes menuLanding {
    0% {
        transform: translateY(-10px);
    }
    100% {
        transform: translateY(0px);
    }
}

.menuLanding {
    animation: menuLanding 0.5s;
}

@keyframes questionMenuLanding {
    0% {
        transform: translateY(10px);
    }
    100% {
        transform: translateY(0px);
    }
}

.questionMenuLanding {
    animation: questionMenuLanding 0.5s;
}

@media (max-width: 725px) {
    #questionIcon {
        display: none;
    }
    #popupQuestionMenu {
        display: none;
    }
}

